src/css/Toolbar.css
.bg-custom{
  background-color: white;
}
.container{
flex-direction: row;
flex-wrap: nowrap;
justify-content: flex-start;
}

.Home-Header{
  color: black;
  font-size: 18px;
  font-weight: bold;
  margin-right: 0px;
  margin-top: 30px;
  margin-bottom: 40px;
  text-decoration: none !important; 
}
  
.About-Header{
  color: black; 
  font-size: 18px;
  font-weight: bold;
  margin-right: 40px;
  margin-top: 30px;
  margin-left: 100px; 
  margin-bottom: 40px;
  text-decoration: none !important; 
}
.Support-Header{
  color: black;
  font-size: 18px;
  font-weight: bold;
  margin-right: 40px;
  margin-top: 30px;
  margin-left: 40px;
  margin-bottom: 40px;
  text-decoration: none !important; 
}
.Contact-Header{
  color: black;
  font-size: 18px;
  font-weight: bold;
  margin-top: 30px;
  margin-left:30px;
  margin-right: 50px;
  margin-bottom: 40px;
  text-decoration: none !important; 
}
.Home-Header:hover{
  color: #FF4081 !important; 
  transition: 0.5s !important;
}
.Home-Header:hover{
  color: #FF4081 !important; 
  transition: 0.5s !important;
}
.About-Header:hover{
  color: rgb(15, 185, 185)!important;
  transition: 0.5s !important;
}
.Support-Header:hover{
  color: #FF4081 !important;
  transition: 0.5s !important;
}
.Contact-Header:hover{
  color: rgb(15, 185, 185) !important;
  transition: 0.5s !important;
}

.logo-text{
  text-decoration: none !important;
}
@media only screen and (max-width: 1300px) {
  .Home-Header{
    color: black;
    font-size: 14.4px;
    font-weight: bold;
    margin-right: 0px;
    margin-top: 24px;
    margin-bottom: 55px;
    text-decoration: none !important; 
  }
  
    
  .About-Header{
    color: black;
    font-size: 14.4px;
    font-weight: bold;
    margin-right: 30px !important; 
    margin-top: 24px !important;
    margin-left: 80px !important;
    margin-bottom: 20px !important;
    text-decoration: none !important; 
  }
  .Support-Header{
    color: black;
    font-size: 14.4px;
    font-weight: bold;
    margin-right: 30px;
    margin-top: 24px;
    margin-left: 32px;
    margin-bottom: 20px;
    text-decoration: none !important; 
  }
  .Contact-Header{
    color: black;
    font-size: 14.4px;
    font-weight: bold;
    margin-top: 24px;
    margin-left:24px;
    margin-right: 30px;
    margin-bottom: 20px;
    text-decoration: none !important; 
  }
  

}

